Fix always visible QuestionMenu activator only happening on Date page

--- a/app/javascript/styles/_index.scss
+++ b/app/javascript/styles/_index.scss
@@ -174,6 +174,7 @@ html {
 }
 
 .EditableCollectionFieldComponent,
+.EditableGroupFieldComponent,
 .EditableTextFieldComponent,
 .EditableTextareaFieldComponent {
   :disabled {
@@ -182,6 +183,7 @@ html {
 }
 
 .EditableCollectionFieldComponent,
+.EditableGroupFieldComponent,
 .EditableTextFieldComponent,
 .EditableTextareaFieldComponent,
 .EditableComponentCollectionItem {
